# whispr2

./: Dockerfile  README.md  ci.yaml  fly.toml  pyproject.toml  whispr.py
.github/workflows/: checks.yml
