[tool.poetry]
name = "whispr"
version = "0.1.0"
description = "social media over signal"
authors = ["technillogue <technillogue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
forestbot = {git = "https://github.com/mobilecoinofficial/forest", rev = "1.2.7"}

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
